--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Users/surtic/Desktop/website_workspace/Personal-Website/src/index.html">
+        <link rel="stylesheet" href="../styles/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <title> Official JL</title>
     </head>
