--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <title> Official JL</title>
     </head>
     <body>
@@ -13,7 +14,7 @@
                 <h1 class="header-1">Welcome!</h1>
             </div>
             <div>
-                <img src="../img/headshot.png" class="headshot_img">
+                <img src="img/headshot.png" class="headshot_img">
                 <p class="paragraph-1">My name is Jason Lin. This is my website for CPSC 3750 Spring 2025.</br>My interests includes politics and architecture.</p>
             </div>
         </div>
