--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">   
+    <style>
+
+    body {
+        font-family: 'Heebo', 'Times New Roman', Times, serif;
+        margin: 0;
+        padding: 1em;
+        text-align: center;
+        background: linear-gradient(150deg, #000827, #000827, #000827, #071038, #233460, #87cdee, #233460, #071038, #000827, #000827, #000827);
+        background-size: 100% 400%;
+    }
+    .introduction {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 100vh;
+        width: 100vw;
+    }
+    .header-1 {
+        font-size: 5em;
+        font-weight: 500;
+        color: #ffffff;
+        padding-top: 30%;
+
+    }
+    .paragraph-1 {
+        font-size: 1.1em;
+        font-weight: 300;
+        color: #ffffff;
+    }
+    .headshot_img {
+        border-radius: 100%;    
+        width: 15em;
+        height: 15em;
+        object-fit: cover;
+        margin-top: 20%;
+    }
+    </style>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <title> Official JL</title>
@@ -12,6 +47,9 @@
         <div class="introduction">
             <div class="header">
                 <h1 class="header-1">Welcome!</h1>
+                <p class="paragraph-1">
+                    View Group Assignment: CSS 1 <a href="GroupCSS1.html">HERE</a>
+                </p>
             </div>
             <div>
                 <img src="img/headshot.png" class="headshot_img">
