--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 <p class="paragraph-1">
                     View Group Assignment: CSS 1 <a href="GroupCSS1.html">HERE</a>
                 </p>
+                <p class="paragraph-1">
+                    Webpage 1 <a href="Prog03/page1.html">HERE</a>
+                </p>
+                <p class="paragraph-1">
+                    Webpage 2 <a href="Prog03/page2.html">HERE</a>
+                </p>
+                <p class="paragraph-1">
+                    Webpage 3 <a href="Prog03/page3.html">HERE</a>
+                </p>
             </div>
             <div>
                 <img src="img/headshot.png" class="headshot_img">
