--- a/Prog03/page2.html
+++ b/Prog03/page2.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <h1 style="font-family:Times New Roman, Times, serif;">The Art of Drawing in a Black and White World</h1>
+        <h1 style="font-family:Times New Roman, Times, serif;">Drawing in a Black and White World</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
