--- a/Prog03/page3.html
+++ b/Prog03/page3.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1 style="font-family:Times New Roman, Times, serif;"">The World of Music</h1>
+        <h1 style="font-family:Times New Roman, Times, serif;"">Modern Shakespeare of Music</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
