--- a/index.html
+++ b/index.html
@@ -1,69 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">   
-    <style>
-
-    body {
-        font-family: 'Heebo', 'Times New Roman', Times, serif;
-        margin: 0;
-        padding: 1em;
-        text-align: center;
-        background: linear-gradient(150deg, #000827, #000827, #000827, #071038, #233460, #87cdee, #233460, #071038, #000827, #000827, #000827);
-        background-size: 100% 400%;
-    }
-    .introduction {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        height: 100vh;
-        width: 100vw;
-    }
-    .header-1 {
-        font-size: 5em;
-        font-weight: 500;
-        color: #ffffff;
-        padding-top: 30%;
-
-    }
-    .paragraph-1 {
-        font-size: 1.1em;
-        font-weight: 300;
-        color: #ffffff;
-    }
-    .headshot_img {
-        border-radius: 100%;    
-        width: 15em;
-        height: 15em;
-        object-fit: cover;
-        margin-top: 20%;
-    }
-    </style>
+<html lang="en"> 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
+        <link rel="stylesheet" href="styles/styles.css">
         <title> Official JL</title>
     </head>
     <body>
-        <div class="introduction">
-            <div class="header">
-                <h1 class="header-1">Welcome!</h1>
-                <p class="paragraph-1">
-                    View Group Assignment: CSS 1 <a href="GroupCSS1.html">HERE</a>
-                </p>
-                <p class="paragraph-1">
-                    Webpage 1 <a href="Prog03/page1.html">HERE</a>
-                </p>
-                <p class="paragraph-1">
-                    Webpage 2 <a href="Prog03/page2.html">HERE</a>
-                </p>
-                <p class="paragraph-1">
-                    Webpage 3 <a href="Prog03/page3.html">HERE</a>
-                </p>
+        <!--NAVBAR-->
+        <nav>
+            <ul class="navbar">
+                <li class="navbar-item"><a href="index.html">Home</a></li>
+                <li class="navbar-item">
+                    <a href="about.html">Group Assignments</a>
+                    <ul class="nav-dropdown">
+                        <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black & White World</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
+                    </ul>
+                </li>
+                <li class="navbar-item"><a href="contact.html">Image Gallery</a></li>
+            </ul>
+        </nav>
+        
+        <!--HERO-->
+        <header class="hero-section">
+            <div class="hero-content">
+                <h1 class="hero-title">Welcome to My Portfolio</h1>
+                <p class="hero-subtitle">Exploring the intersections of politics, architecture, and technology.</p>
+                <a href="#about" class="btn btn-primary">Learn More</a>
             </div>
-            <div>
-                <img src="img/headshot.png" class="headshot_img">
-                <p class="paragraph-1">My name is Jason Lin. This is my website for CPSC 3750 Spring 2025.</br>My interests includes politics and architecture.</p>
-            </div>
-        </div>
+        </header>
+
     </body>
 </html>
