fixed hero section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <!--HERO-->
         <header class="hero-section">
             <div class="hero-content">
-                <h1 class="hero-title">Welcome to My Portfolio</h1>
-                <p class="hero-subtitle">Exploring the intersections of politics, architecture, and technology.</p>
+                <img src="img/headshot.png" alt="Jason Lin" class="hero-headshot">
+                <h1 class="hero-title">Welcome to My Website</h1>
+                <p class="hero-description">
+                    My name is <strong>Jason Lin</strong>. This is my website for <strong>CPSC 3750 Spring 2025</strong>.
+                    <br>My interests include <strong>politics</strong>, <strong>architecture</strong>, and <strong>music</strong>.
+                </p>
                 <a href="#about" class="btn btn-primary">Learn More</a>
             </div>
         </header>
