--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">    
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="styles/styles.css">
@@ -10,26 +12,31 @@
     </head>
     <body>
         <!--NAVBAR-->
-        <nav>
-            <ul class="navbar">
-                <li class="navbar-item"><a href="index.html">Home</a></li>
+        <nav class="navbar">
+            <ul class="navbar-menu">
                 <li class="navbar-item">
-                    <a href="about.html">Group Assignments</a>
+                    <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
                     <ul class="nav-dropdown">
                         <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
                         <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black & White World</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
                     </ul>
                 </li>
-                <li class="navbar-item"><a href="contact.html">Image Gallery</a></li>
+                <li class="navbar-item">
+                    <a href="#"><i class="fa fa-image"></i> Image Gallery</a>
+                    <ul class="nav-dropdown">
+                        <li class="nav-dropdown-item"><a href="img-gallery/yegallery.html">Kanye West Album Gallery</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         
         <!--HERO-->
         <header class="hero-section">
             <div class="hero-content">
-                <img src="img/headshot.png" alt="Jason Lin" class="hero-headshot">
+                <img src="img/headshot.png" alt="me" class="hero-headshot">
                 <h1 class="hero-title">Welcome to My Website</h1>
                 <p class="hero-description">
                     My name is <strong>Jason Lin</strong>. This is my website for <strong>CPSC 3750 Spring 2025</strong>.
@@ -39,5 +46,47 @@
             </div>
         </header>
 
+        <!-- ALBUM SECTION -->
+        <section class="top-albums-section">
+            <div class="albums-content">
+                <h2 class="albums-content-head">Top 3 Albums by <br>Kanye</h2>
+            </div>
+            <div class="songs-content">
+                <table class="responsive-table">
+                    <thead>
+                        <tr>
+                            <th>†________________________________†</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Donda</td>
+                        </tr>
+                        <tr>
+                            <td>Graduation</td>
+                        </tr>
+                        <tr>
+                            <td>Ye</td>
+                        </tr>
+                    <thead>
+                        <tr>
+                            <th>†________________________________†</th>
+                        </tr>
+                    </thead>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+
+        <!-- FOOTER -->
+        <footer class="footer">
+            <div class="footer-icons">
+                <a href="https://x.com/Jasovian" target="_blank">
+                    <i class="fa-brands fa-x-twitter" style="font-size: 2em; color: white; padding: 0em 0.5em;"></i>         
+                </a>
+            </div>
+            <p style="font-size: 1.5em; padding: 0em 0.5em;">© 2025 OfficialJL</p>
+        </footer>
     </body>
 </html>
