--- a/img-gallery/yegallery.html
+++ b/img-gallery/yegallery.html
@@ -11,20 +11,20 @@
         <title>Kanye West Album Gallery</title>
     </head>
     <body>
-        
         <!--NAVBAR-->
         <nav class="navbar">
             <ul class="navbar-menu">
                 <li class="navbar-item">
-                    <a href="../index.html"><i class="fa fa-home"></i> Home</a>
+                    <a href="index.html"><i class="fa fa-home"></i> Home</a>
                 </li>
                 <li class="navbar-item">
                     <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
                     <ul class="nav-dropdown">
-                        <li class="nav-dropdown-item"><a href="../GroupCSS1.html">How-to CSS</a></li>
-                        <li class="nav-dropdown-item"><a href="../Prog03/page1.html">Exploring Architecture</a></li>
-                        <li class="nav-dropdown-item"><a href="../Prog03/page2.html">Drawing in a Black & White World</a></li>
-                        <li class="nav-dropdown-item"><a href="../Prog03/page3.html">Modern Shakespeare of Music</a></li>
+                        <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
+                        <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
                     </ul>
                 </li>
                 <li class="navbar-item">
