--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <ul class="nav-dropdown">
                         <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
                         <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
+                        <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
                     </ul>
                 </li>
                 <li class="navbar-item">
