--- a/assignments/three-interests/architecture.html
+++ b/assignments/three-interests/architecture.html
@@ -152,9 +152,6 @@
                 <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
                 <ul class="nav-dropdown">
                     <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
                     <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
                 </ul>
             </li>
@@ -198,7 +195,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 OfficialJasonLin. All rights reserved.</p>
+        <p class="footer-text">&copy; 2025 OfficialJasonLin. All rights reserved.</p>
     </footer>
 </body>
 </html>
