--- a/group_assignments/GroupCSS1.html
+++ b/group_assignments/GroupCSS1.html
@@ -60,16 +60,41 @@
             margin-top: 1em;
             border-style: dashed;
         }
-        /* This is a comment */
     </style>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
+        <link rel="stylesheet" href="../styles/navbar.css">
         <title> Official JL</title>
     </head>
     <body>
+        <!--NAVBAR-->
+        <nav class="navbar">
+            <ul class="navbar-menu">
+                <li class="navbar-item">
+                    <a href="../index.html"><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
+                    <ul class="nav-dropdown">
+                        <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
+                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
+                        <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
+                    </ul>
+                </li>
+                <li class="navbar-item">
+                    <a href="#"><i class="fa fa-image"></i> Image Gallery</a>
+                    <ul class="nav-dropdown">
+                        <li class="nav-dropdown-item"><a href="img-gallery/yegallery.html">Kanye West Album Gallery</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
         <div class = "page-1">
             <div class="box">
                 <p class="text-1">CSS Syntax<br>This text is centered and in green</p>
