--- a/group_assignments/GroupCSS2.html
+++ b/group_assignments/GroupCSS2.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">    
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
-        <link rel="stylesheet" href="../styles/yegallery-styles.css">
+        <link rel="stylesheet" href="GroupCSS2.css">
         <title>Kanye West Album Gallery</title>
     </head>
     <body>
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <ul class="navbar-menu">
                 <li class="navbar-item">
-                    <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                    <a href="../index.html"><i class="fa fa-home"></i> Home</a>
                 </li>
                 <li class="navbar-item">
                     <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
@@ -39,59 +39,59 @@
         <!-- Album Gallery -->
         <section class="gallery-container">
             <div class="album-card">
-                <img src="../img/album/5.jpg" alt="My Beautiful Dark Twisted Fantasy">
+                <img src="../img/GroupCSS2Img/5.jpg" alt="My Beautiful Dark Twisted Fantasy">
                 <div class="album-description">My Beautiful Dark Twisted Fantasy (2010)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/7.jpg" alt="Yeezus">
+                <img src="../img/GroupCSS2Img/7.jpg" alt="Yeezus">
                 <div class="album-description">Yeezus (2013)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/1.jpg" alt="The College Dropout">
+                <img src="../img/GroupCSS2Img/1.jpg" alt="The College Dropout">
                 <div class="album-description">The College Dropout (2004)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/8.jpg" alt="The Life of Pablo">
+                <img src="../img/GroupCSS2Img/8.jpg" alt="The Life of Pablo">
                 <div class="album-description">The Life of Pablo (2016)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/12.jpg" alt="Donda">
+                <img src="../img/GroupCSS2Img/12.jpg" alt="Donda">
                 <div class="album-description">Donda (2021)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/11.jpg" alt="Jesus Is King">
+                <img src="../img/GroupCSS2Img/11.jpg" alt="Jesus Is King">
                 <div class="album-description">Jesus Is King (2019)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/10.jpg" alt="Kids See Ghosts">
+                <img src="../img/GroupCSS2Img/10.jpg" alt="Kids See Ghosts">
                 <div class="album-description">Kids See Ghosts (2018)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/9.jpg" alt="Ye">
+                <img src="../img/GroupCSS2Img/9.jpg" alt="Ye">
                 <div class="album-description">Ye (2018)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/6.jpg" alt="Watch the Throne">
+                <img src="../img/GroupCSS2Img/6.jpg" alt="Watch the Throne">
                 <div class="album-description">Watch the Throne (2011)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/4.jpg" alt="808s & Heartbreak">
+                <img src="../img/GroupCSS2Img/4.jpg" alt="808s & Heartbreak">
                 <div class="album-description">808s & Heartbreak (2008)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/3.jpg" alt="Graduation">
+                <img src="../img/GroupCSS2Img/3.jpg" alt="Graduation">
                 <div class="album-description">Graduation (2007)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/2.jpg" alt="Late Registration">
+                <img src="../img/GroupCSS2Img/2.jpg" alt="Late Registration">
                 <div class="album-description">Late Registration (2005)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/13.jpg" alt="Vultures 1">
+                <img src="../img/GroupCSS2Img/13.jpg" alt="Vultures 1">
                 <div class="album-description">Vultures 1 (2024)</div>
             </div>
             <div class="album-card">
-                <img src="../img/album/14.jpg" alt="Vultures 2">
+                <img src="../img/GroupCSS2Img/14.jpg" alt="Vultures 2">
                 <div class="album-description">Vultures 2 (2024)</div>
             </div>
         </section>
