footer and navbar to html file

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/navbar.css">
+        <script src="scripts/app.js" defer></script>
         <title> Official JL</title>
     </head>
     <body>
-        <?php include 'navbar.html'; ?>
-
+        <div id="navbar-placeholder"></div>
+    
         <!--HERO-->
         <header class="hero-section">
             <div class="hero-content">
@@ -59,15 +60,6 @@
             </div>
         </section>
 
-
-        <!-- FOOTER -->
-        <footer class="footer">
-            <div class="footer-icons">
-                <a href="https://x.com/Jasovian" target="_blank">
-                    <i class="fa-brands fa-x-twitter" style="font-size: 2em; color: white; padding: 0em 0.5em;"></i>         
-                </a>
-            </div>
-            <p style="font-size: 1.5em; padding: 0em 0.5em;">© 2025 OfficialJL</p>
-        </footer>
+        <div id="footer-placeholder"></div>
     </body>
 </html>
