--- a/assignments/hybrid-layout/layout.html
+++ b/assignments/hybrid-layout/layout.html
@@ -2,27 +2,12 @@
 <html lang="en">
 <head>
     <title>Sample Layout</title>
-    <link href="layout.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="layout.css">
+    <script src="Personal-Website/scripts/app.js" defer></script>
 </head>
 <body>
-    <!--NAVBAR-->
-    <nav class="navbar">
-        <ul class="navbar-menu">
-            <li class="navbar-item">
-                <a href="#">Mission</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#">History</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#">Executive Team</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     <header>
         <img src="acmewidgets.jpg" alt="ACME Widgets LLC">
@@ -31,23 +16,7 @@
     <div id="wrapper">
         <div id="content_area">
             <h1>Welcome to ACME Widgets!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Nam tincidunt posuere malesuada. Suspendisse ac felis ac ante
-              tincidunt ullamcorper. Nulla vitae ligula vitae mi rhoncus
-              adipiscing. Etiam congue felis id ante semper at imperdiet
-              massa tempor. Nullam hendrerit fermentum ligula, sit amet
-              pellentesque purus faucibus in. Sed molestie lacus mauris,
-              ultrices accumsan sem. Phasellus facilisis malesuada sem, nec
-              ornare ipsum dictum consectetur.</p>
-              <p>Nulla libero nisl, consectetur eget accumsan vel, interdum
-              vitae enim vitae nulla feugiat dignissim ut sit amet odio.
-              Nunc non enim id sem faucibus congue. Integer ac mi in justo
-              euismod sodales. Aenean imperdiet vestibulum auctor. Sed
-              ullamcorper congue ipsum, eget vulputate sem scelerisque in.
-              Donec ornare vestibulum congue. Etiam sapien nulla, rutrum
-              mattis mattis ut, pellentesque eget augue. Proin nisl mauris,
-              suscipit quis elementum ac, vestibulum quis lacus. Ut eget
-              justo vitae urna varius sodales.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt posuere malesuada. Suspendisse ac felis ac ante tincidunt ullamcorper...</p>
         </div>
 
         <div id="right_side">
@@ -56,8 +25,6 @@
         </div>
     </div>
 
-    <footer>
-        &copy; 2025 ACME Widgets. All rights reserved.
-    </footer>
+    <div id="footer-placeholder"></div>
 </body>
 </html>
