--- a/footer.html
+++ b/footer.html
@@ -5,5 +5,5 @@
             <i class="fa-brands fa-x-twitter" style="font-size: 2em; color: white; padding: 0em 0.5em;"></i>         
         </a>
     </div>
-    <p style="font-size: 1.5em; padding: 0em 0.5em;">© 2025 OfficialJL</p>
+    <p class=footer-text>© 2025 OfficialJL</p>
 </footer>
