--- a/group_assignments/GroupCSS2.html
+++ b/group_assignments/GroupCSS2.html
@@ -11,30 +11,7 @@
         <title>Kanye West Album Gallery</title>
     </head>
     <body>
-        <!--NAVBAR-->
-        <nav class="navbar">
-            <ul class="navbar-menu">
-                <li class="navbar-item">
-                    <a href="../index.html"><i class="fa fa-home"></i> Home</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
-                    <ul class="nav-dropdown">
-                        <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
-                        <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
-                    </ul>
-                </li>
-                <li class="navbar-item">
-                    <a href="#"><i class="fa fa-image"></i> Image Gallery</a>
-                    <ul class="nav-dropdown">
-                        <li class="nav-dropdown-item"><a href="img-gallery/yegallery.html">Kanye West Album Gallery</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <div id="navbar-placeholder"></div>
 
         <!-- Album Gallery -->
         <section class="gallery-container">
@@ -96,15 +73,6 @@
             </div>
         </section>
 
-        <!-- FOOTER -->
-        <footer class="footer">
-            <div class="footer-icons">
-                <a href="https://x.com/Jasovian" target="_blank">
-                    <i class="fa-brands fa-x-twitter" style="font-size: 2em; color: white; padding: 0em 0.5em;"></i>         
-                </a>
-            </div>
-            <p style="font-size: 1.5em; padding: 0em 0.5em;">© 2025 OfficialJL</p>
-        </footer>
-
+        <div id="footer-placeholder"></div>
     </body>
 </html>
