--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/navbar.css">
+        <link rel="stylesheet" href="styles/footer.css">
         <script src="scripts/app.js" defer></script>
         <title> Official JL</title>
     </head>
