--- a/assignments/three-interests/music.html
+++ b/assignments/three-interests/music.html
@@ -65,30 +65,7 @@
     </style>
 </head>
 <body>
-    <!--NAVBAR-->
-    <nav class="navbar">
-        <ul class="navbar-menu">
-            <li class="navbar-item">
-                <a href="index.html"><i class="fa fa-home"></i> Home</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
-                <ul class="nav-dropdown">
-                    <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
-                    <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
-                    <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
-                </ul>
-            </li>
-            <li class="navbar-item">
-                <a href="#"><i class="fa fa-image"></i> Image Gallery</a>
-                <ul class="nav-dropdown">
-                    <li class="nav-dropdown-item"><a href="img-gallery/yegallery.html">Kanye West Album Gallery</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     <header style="padding-top: 6em;">
         <h1 style="font-family:Times New Roman, Times, serif;"">Modern Shakespeare of Music</h1>
@@ -120,8 +97,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 OfficalJasonLin. All rights reserved.</p>
-    </footer>
+    <div id="footer-placeholder"></div>
 </body>
 </html>
