--- a/group_assignments/GroupCSS1.html
+++ b/group_assignments/GroupCSS1.html
@@ -70,30 +70,7 @@
         <title> Official JL</title>
     </head>
     <body>
-        <!--NAVBAR-->
-        <nav class="navbar">
-            <ul class="navbar-menu">
-                <li class="navbar-item">
-                    <a href="../index.html"><i class="fa fa-home"></i> Home</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
-                    <ul class="nav-dropdown">
-                        <li class="nav-dropdown-item"><a href="GroupCSS1.html">How-to CSS</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page1.html">Exploring Architecture</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page2.html">Drawing in a Black and White World</a></li>
-                        <li class="nav-dropdown-item"><a href="Prog03/page3.html">Modern Shakespeare of Music</a></li>
-                        <li class="nav-dropdown-item"><a href="Basic-ff-hybrid-layout/layout.html">ACME Widgets</a></li>
-                    </ul>
-                </li>
-                <li class="navbar-item">
-                    <a href="#"><i class="fa fa-image"></i> Image Gallery</a>
-                    <ul class="nav-dropdown">
-                        <li class="nav-dropdown-item"><a href="img-gallery/yegallery.html">Kanye West Album Gallery</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <div id="navbar-placeholder"></div>
 
         <div class = "page-1">
             <div class="box">
@@ -157,7 +134,6 @@
             </div>
         </div>
         
-
-
+        <div id="footer-placeholder"></div>
     </body>
 </html>
