--- a/navbar.html
+++ b/navbar.html
@@ -2,16 +2,16 @@
 <nav class="navbar">
     <ul class="navbar-menu">
         <li class="navbar-item">
-            <a href="/index.html"><i class="fa fa-home"></i> Home</a>
+            <a href="index.html"><i class="fa fa-home"></i> Home</a>
         </li>
         <li class="navbar-item">
             <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS1.html">Group Assignment 1</a>
+                    <a href="group_assignments/GroupCSS1.html">Group Assignment 1</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS2.html">Group Assignment 2</a>
+                    <a href="group_assignments/GroupCSS2.html">Group Assignment 2</a>
                 </li>
             </ul>
         </li>
@@ -19,24 +19,23 @@
             <a href="#"><i class="fa fa-image"></i> Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/hybrid-layout/layout.html">ACME Widgets</a>
+                    <a href="assignments/hybrid-layout/layout.html">Hybrid Layout</a>
                 </li>
                 <li class="nav-dropdown-item">
                     <a href="#">Three Interests</a>
                     <ul class="nav-dropdown nested-dropdown">
                         <li class="nav-dropdown-item">
-                            <a href="/assignments/three-interests/architecture.html">Architecture</a>
+                            <a href="assignments/three-interests/architecture.html">Architecture</a>
                         </li>
                         <li class="nav-dropdown-item">
-                            <a href="/assignments/three-interests/art.html">Art</a>
+                            <a href="assignments/three-interests/art.html">Art</a>
                         </li>
                         <li class="nav-dropdown-item">
-                            <a href="/assignments/three-interests/music.html">Music</a>
+                            <a href="assignments/three-interests/music.html">Music</a>
                         </li>
                     </ul>
                 </li>
             </ul>
         </li>
     </ul>
-  </nav>
-  
+</nav>
