js modify + place holders

--- a/group_assignments/GroupCSS1.html
+++ b/group_assignments/GroupCSS1.html
@@ -68,6 +68,7 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="../styles/navbar.css">
         <title> Official JL</title>
+        <script src="/scripts/app.js"></script>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
