--- a/group_assignments/GroupCSS2.html
+++ b/group_assignments/GroupCSS2.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="GroupCSS2.css">
         <title>Kanye West Album Gallery</title>
+        <script src="/scripts/app.js"></script>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
