--- a/assignments/hybrid-layout/layout.html
+++ b/assignments/hybrid-layout/layout.html
@@ -4,10 +4,10 @@
     <title>Sample Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="layout.css">
-    <script src="Personal-Website/scripts/app.js" defer></script>
+    <script src="/scripts/app.js"></script>
 </head>
 <body>
-    <div id="navbar-placeholder"></div>
+<div id="navbar-placeholder"></div>
 
     <header>
         <img src="acmewidgets.jpg" alt="ACME Widgets LLC">
@@ -15,7 +15,7 @@
 
     <div id="wrapper">
         <div id="content_area">
-            <h1>Welcome to ACME Widgets!</h1>
+            <h1>Welcome !! to ACME Widgets!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt posuere malesuada. Suspendisse ac felis ac ante tincidunt ullamcorper...</p>
         </div>
 
@@ -25,6 +25,6 @@
         </div>
     </div>
 
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder"></div>>
 </body>
 </html>
