--- a/assignments/three-interests/architecture.html
+++ b/assignments/three-interests/architecture.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architecture</title>
+    <script src="/scripts/app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
