--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/navbar.css">
         <link rel="stylesheet" href="styles/footer.css">
-        <script src="scripts/app.js" defer></script>
+        <script src="/scripts/app.js"></script>
         <title> Official JL</title>
     </head>
     <body>
