--- a/assignments/three-interests/architecture.html
+++ b/assignments/three-interests/architecture.html
@@ -54,7 +54,7 @@
 <body>
     <div id="navbar-placeholder"></div>
 
-    <header style="padding-top: 6em;">
+    <header style="padding-top: 1em;">
         <h1 style="font-family:Times New Roman, Times, serif;">Exploring Architecture</h1>
     </header>
 
@@ -67,11 +67,11 @@
                 Architecture is the integration of body, mind, and Earth. The ultimate form of expression a person
             can impose on this world.</p>
             <figure>
-                <img src="../img/building.png" style="width: 20em;">
+                <img src="../../img/building.png" style="width: 20em;">
                 <p style="color:white;">An example of breathtaking architectural design.</p>
             </figure>
             <figure>
-                <img src="../img/castle.png" style="width: 20em;">
+                <img src="../../img/castle.png" style="width: 20em;">
                 <p style="color:white;">A cool castle.</p>
             </figure>
         </section>
@@ -79,7 +79,7 @@
         <aside>
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="img/building.png">Modern Architecture</a></li>
+                <li><a href="https://www.lifeofanarchitect.com/what-is-architecture-2/">Modern Architecture</a></li>
             </ul>
         </aside>
     </main>
