--- a/assignments/three-interests/art.html
+++ b/assignments/three-interests/art.html
@@ -66,7 +66,7 @@
 <body>
     <div id="navbar-placeholder"></div>
 
-    <header style="padding-top: 6em;">
+    <header style="padding-top: 1em;">
         <h1 style="font-family:Times New Roman, Times, serif;">Drawing in a Black and White World</h1>
     </header>
 
@@ -80,9 +80,9 @@
                 on a finite page. Truly magical and mysterious.
             </p>
             <figure>
-                <img src="../img/bear.png" style="width:20em;">
+                <img src="../../img/bear.png" style="width:20em;">
                 <p style="color:white">Kanye West has been the forefront of my inpiration lately.<br> I love you Ye!</p>
-                <img src="../img/deer.png" style="width:20em;">
+                <img src="../../img/deer.png" style="width:20em;">
                 <p style="color:white">In my opinion, a deer in the snow is the most peaceful image.</p>
             </figure>
         </section>
