--- a/assignments/three-interests/music.html
+++ b/assignments/three-interests/music.html
@@ -68,7 +68,7 @@
 <body>
     <div id="navbar-placeholder"></div>
 
-    <header style="padding-top: 6em;">
+    <header style="padding-top: 1em;">
         <h1 style="font-family:Times New Roman, Times, serif;"">Modern Shakespeare of Music</h1>
     </header>
 
@@ -88,11 +88,11 @@
                 Music changes people. The brain is very mutable to music and the opposite sex. I enjoy music more though. Shoutout to Kanye, truly the Shakespeare of our time. I LOVE YOU KANYE !
             </p>
             <figure>
-                <img src="../img/ye.png" style="width:30em;">
+                <img src="../../img/ye.png" style="width:30em;">
                 <p style="color:white">Kanye surrending to our lord and savior, Jesus Christ †</p>
             </figure>
             <figure>
-                <img src="../img/yesun.png" style="width:30em;">
+                <img src="../../img/yesun.png" style="width:30em;">
                 <p style="color:white">Kanye performing in his music video "Sunday Service"</p>
             </figure>
         </section>
