--- a/navbar.html
+++ b/navbar.html
@@ -8,18 +8,18 @@
             <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="group_assignments/GroupCSS1.html">Group Assignment 1</a>
+                    <a href="/group_assignments/GroupCSS1.html">Group Assignment 1</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="group_assignments/GroupCSS2.html">Group Assignment 2</a>
+                    <a href="/group_assignments/GroupCSS2.html">Group Assignment 2</a>
                 </li>
             </ul>
         </li>
         <li class="navbar-item">
             <a href="#"><i class="fa fa-image"></i> Assignments</a>
-            <ul class="nav-dropdown">
-                <li class="nav-dropdown-item">
-                    <a href="assignments/hybrid-layout/layout.html">Hybrid Layout</a>
+            <ul class="/nav-dropdown">
+                <li class="/nav-dropdown-item">
+                    <a href="/assignments/hybrid-layout/layout.html">Hybrid Layout</a>
                 </li>
                 <li class="nav-dropdown-item">
                     <a href="#">Three Interests</a>
