--- a/group_assignments/GroupCSS1.html
+++ b/group_assignments/GroupCSS1.html
@@ -68,10 +68,18 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="../styles/navbar.css">
         <title> Official JL</title>
-        <script src="/scripts/app.js"></script>
+        <link rel="stylesheet" href="../styles/navbar.css">
     </head>
     <body>
-        <div id="navbar-placeholder"></div>
+        <div id="navbar-container"></div>
+        <script>
+            fetch('../navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar-container').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading navbar:', error));
+        </script>
 
         <div class = "page-1">
             <div class="box">
