--- a/assignments/hybrid-layout/layout.html
+++ b/assignments/hybrid-layout/layout.html
@@ -4,10 +4,18 @@
     <title>Sample Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="layout.css">
-    <script src="/scripts/app.js"></script>
+    <link rel="stylesheet" href="../../styles/navbar.css">
 </head>
 <body>
-<div id="navbar-placeholder"></div>
+    <div id="navbar-container"></div>
+    <script>
+        fetch('../../navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
 
     <header>
         <img src="acmewidgets.jpg" alt="ACME Widgets LLC">
