--- a/assignments/three-interests/art.html
+++ b/assignments/three-interests/art.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing</title>
-    <script src="/scripts/app.js"></script>
+    <link rel="stylesheet" href="../../styles/navbar.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,7 +64,15 @@
     </style>
 </head>
 <body>
-    <div id="navbar-placeholder"></div>
+    <div id="navbar-container"></div>
+    <script>
+        fetch('../../navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
 
     <header style="padding-top: 1em;">
         <h1 style="font-family:Times New Roman, Times, serif;">Drawing in a Black and White World</h1>
