--- a/group_assignments/GroupCSS2.html
+++ b/group_assignments/GroupCSS2.html
@@ -9,10 +9,18 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="GroupCSS2.css">
         <title>Kanye West Album Gallery</title>
-        <script src="/scripts/app.js"></script>
+        <link rel="stylesheet" href="../styles/navbar.css">
     </head>
     <body>
-        <div id="navbar-placeholder"></div>
+        <div id="navbar-container"></div>
+        <script>
+            fetch('../navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar-container').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading navbar:', error));
+        </script>
 
         <!-- Album Gallery -->
         <section class="gallery-container">
