--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
         <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/navbar.css">
         <link rel="stylesheet" href="styles/footer.css">
-        <script src="/scripts/app.js"></script>
         <title> Official JL</title>
     </head>
     <body>
-        <div id="navbar-placeholder"></div>
+        <div id="navbar-container"></div>
+        <script>
+            fetch('navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar-container').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading navbar:', error));
+        </script>
     
         <!--HERO-->
         <header class="hero-section">
