--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar">
     <ul class="navbar-menu">
         <li class="navbar-item">
-            <a href="index.html"><i class="fa fa-home"></i> Home</a>
+            <a href="/index.html"><i class="fa fa-home"></i> Home</a>
         </li>
         <li class="navbar-item">
             <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
