--- a/navbar.html
+++ b/navbar.html
@@ -16,9 +16,9 @@
             </ul>
         </li>
         <li class="navbar-item">
-            <a href="#"><i class="fa fa-image"></i> Assignments</a>
-            <ul class="/nav-dropdown">
-                <li class="/nav-dropdown-item">
+            <a href="#"><i class="fa fa-paperclip"></i> Assignments</a>
+            <ul class="nav-dropdown">
+                <li class="nav-dropdown-item">
                     <a href="/assignments/hybrid-layout/layout.html">Hybrid Layout</a>
                 </li>
                 <li class="nav-dropdown-item">
