added to nabavr

--- a/navbar.html
+++ b/navbar.html
@@ -35,6 +35,9 @@
                         </li>
                     </ul>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/php_demo/index.php">PHP DEMO</a>
+                </li>
             </ul>
         </li>
     </ul>
