--- a/navbar.html
+++ b/navbar.html
@@ -38,6 +38,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/php_demo/helloworld.php">PHP DEMO</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/band/index.html">Ye Site</a>
+                </li>
             </ul>
         </li>
     </ul>
