--- a/assignments/button/prog04.html
+++ b/assignments/button/prog04.html
@@ -48,7 +48,7 @@
                 .then(data => {
                     document.getElementById('footer-container').innerHTML = data;
                 })
-                .catch(error => console.error('Error loading navbar:', error));
+                .catch(error => console.error('Error loading footer:', error));
         </script>
     </body>
 </html>
