--- a/navbar.html
+++ b/navbar.html
@@ -36,10 +36,13 @@
                     </ul>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/php_demo/helloworld.php">PHP DEMO</a>
+                    <a href="/assignments/php-demo/helloworld.php">PHP DEMO</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/band/index.html">Ye Site</a>
+                    <a href="/assignments/band/index.html">YEEZY SITE</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/sort-demo/sort.html">Sort DEMO</a>
                 </li>
             </ul>
         </li>
