added buttonmv + directory name changes

--- a/navbar.html
+++ b/navbar.html
@@ -36,6 +36,12 @@
                     </ul>
                 </li>
                 <li class="nav-dropdown-item">
+                    <a href="/assignments/button-clr/prog04.html/">Button-Color</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/button-mv/ButtonMove.html">Button-Move</a>
+                </li>
+                <li class="nav-dropdown-item">
                     <a href="/assignments/php-demo/helloworld.php">PHP DEMO</a>
                 </li>
                 <li class="nav-dropdown-item">
