added all button-mv functionality inclduing speed and clear functions

--- a/assignments/button-mv/ButtonMove.html
+++ b/assignments/button-mv/ButtonMove.html
@@ -37,6 +37,7 @@
                 <input type="range" id="speedSlider" min="1" max="10" value="3">
                 <span id="speedValue">3</span>  
             </div>
+            <button onclick="clearAll()">Clear</button>
             <div class="total-display">
                 Total: <span id="totalSum">0</span>
             </div>
