changed navbar syntax

--- a/navbar.html
+++ b/navbar.html
@@ -8,10 +8,10 @@
             <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS1.html">Group Assignment 1</a>
+                    <a href="/group_assignments/GroupCSS1.html">Group Assignment I</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS2.html">Group Assignment 2</a>
+                    <a href="/group_assignments/GroupCSS2.html">Group Assignment II</a>
                 </li>
             </ul>
         </li>
@@ -19,7 +19,7 @@
             <a href="#"><i class="fa fa-paperclip"></i> Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/hybrid-layout/layout.html">Hybrid Layout</a>
+                    <a href="/assignments/hybrid-layout/layout.html">Hybrid-layout</a>
                 </li>
                 <li class="nav-dropdown-item">
                     <a href="#">Three Interests</a>
@@ -36,19 +36,19 @@
                     </ul>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/button-clr/prog04.html/">Button-Color</a>
+                    <a href="/assignments/button-clr/prog04.html/">Button-color</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/button-mv/ButtonMove.html">Button-Move</a>
+                    <a href="/assignments/button-mv/ButtonMove.html">Button-move</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/php-demo/helloworld.php">PHP DEMO</a>
+                    <a href="/assignments/php-demo/helloworld.php">PhP-demo</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/band/index.html">YEEZY SITE</a>
+                    <a href="/assignments/band/index.html">YEEZY-SITE</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/sort-demo/sort.html">Sort DEMO</a>
+                    <a href="/assignments/sort-demo/sort.html">Sort-dEMO</a>
                 </li>
             </ul>
         </li>
