added card to navbar

--- a/navbar.html
+++ b/navbar.html
@@ -57,7 +57,7 @@
                     <a href="/assignments/sort-demo/sort.html">Sort-dEMO</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/card/card.html">Sort-dEMO</a>
+                    <a href="/assignments/card/card.html">Card</a>
                 </li>
             </ul>
         </li>
