--- a/group_assignments/ga2/GroupCSS2.html
+++ b/group_assignments/ga2/GroupCSS2.html
@@ -9,13 +9,13 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="GroupCSS2.css">
         <title>Kanye West Album Gallery</title>
-        <link rel="stylesheet" href="../styles/navbar.css">
-        <link rel="stylesheet" href="../styles/footer.css">
+        <link rel="stylesheet" href="../../styles/navbar.css">
+        <link rel="stylesheet" href="../../styles/footer.css">
     </head>
     <body>
         <div id="navbar-container"></div>
         <script>
-            fetch('../navbar.html')
+            fetch('../../navbar.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('navbar-container').innerHTML = data;
@@ -26,66 +26,66 @@
         <!-- Album Gallery -->
         <section class="gallery-container">
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/5.jpg" alt="My Beautiful Dark Twisted Fantasy">
+                <img src="../../img/GroupCSS2Img/5.jpg" alt="My Beautiful Dark Twisted Fantasy">
                 <div class="album-description">My Beautiful Dark Twisted Fantasy (2010)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/7.jpg" alt="Yeezus">
+                <img src="../../img/GroupCSS2Img/7.jpg" alt="Yeezus">
                 <div class="album-description">Yeezus (2013)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/1.jpg" alt="The College Dropout">
+                <img src="../../img/GroupCSS2Img/1.jpg" alt="The College Dropout">
                 <div class="album-description">The College Dropout (2004)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/8.jpg" alt="The Life of Pablo">
+                <img src="../../img/GroupCSS2Img/8.jpg" alt="The Life of Pablo">
                 <div class="album-description">The Life of Pablo (2016)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/12.jpg" alt="Donda">
+                <img src="../../img/GroupCSS2Img/12.jpg" alt="Donda">
                 <div class="album-description">Donda (2021)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/11.jpg" alt="Jesus Is King">
+                <img src="../../img/GroupCSS2Img/11.jpg" alt="Jesus Is King">
                 <div class="album-description">Jesus Is King (2019)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/10.jpg" alt="Kids See Ghosts">
+                <img src="../../img/GroupCSS2Img/10.jpg" alt="Kids See Ghosts">
                 <div class="album-description">Kids See Ghosts (2018)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/9.jpg" alt="Ye">
+                <img src="../../img/GroupCSS2Img/9.jpg" alt="Ye">
                 <div class="album-description">Ye (2018)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/6.jpg" alt="Watch the Throne">
+                <img src="../../img/GroupCSS2Img/6.jpg" alt="Watch the Throne">
                 <div class="album-description">Watch the Throne (2011)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/4.jpg" alt="808s & Heartbreak">
+                <img src="../../img/GroupCSS2Img/4.jpg" alt="808s & Heartbreak">
                 <div class="album-description">808s & Heartbreak (2008)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/3.jpg" alt="Graduation">
+                <img src="../../img/GroupCSS2Img/3.jpg" alt="Graduation">
                 <div class="album-description">Graduation (2007)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/2.jpg" alt="Late Registration">
+                <img src="../../img/GroupCSS2Img/2.jpg" alt="Late Registration">
                 <div class="album-description">Late Registration (2005)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/13.jpg" alt="Vultures 1">
+                <img src="../../img/GroupCSS2Img/13.jpg" alt="Vultures 1">
                 <div class="album-description">Vultures 1 (2024)</div>
             </div>
             <div class="album-card">
-                <img src="../img/GroupCSS2Img/14.jpg" alt="Vultures 2">
+                <img src="../../img/GroupCSS2Img/14.jpg" alt="Vultures 2">
                 <div class="album-description">Vultures 2 (2024)</div>
             </div>
         </section>
 
         <div id="footer-container"></div>
         <script>
-            fetch('../footer.html')
+            fetch('../../footer.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('footer-container').innerHTML = data;
