added path to navbar + updated textfield update

--- a/navbar.html
+++ b/navbar.html
@@ -54,10 +54,13 @@
                     <a href="/assignments/band/index.html">YEEZY-SITE</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/sort-demo/sort.html">Sort-dEMO</a>
+                    <a href="/assignments/sort-demo/sort.html">Sort-Demo</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/card/card.html">Card</a>
+                    <a href="/assignments/card/card.html">Card-Info</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/prime-numbers/prime.html">Prime-Numbers</a>
                 </li>
             </ul>
         </li>
