fixed the ascending and descending feature

--- a/assignments/prime-numbers/prime.html
+++ b/assignments/prime-numbers/prime.html
@@ -37,15 +37,16 @@ Grade Level Completed: C, B, A, and Bonus
             <input type="number" id="numberInput" min="1" placeholder="e.g., 50">
             <button id="startButton">START</button>
             <button id="toggleTheme">Toggle Dark Mode</button>
+            <button id="primeSortButton">Asc/Desc</button>
 
             <div class="lists-container">
                 <div class="list">
-                <h2>Prime Numbers</h2>
-                <ul id="primeList"></ul>
+                    <h2>Prime Numbers</h2>
+                    <ul id="primeList"></ul>
                 </div>
                 <div class="list">
-                <h2>Composite Numbers</h2>
-                <ul id="nonPrimeList"></ul>
+                    <h2>Composite Numbers</h2>
+                    <ul id="nonPrimeList"></ul>
                 </div>
             </div>
 
